--- a/resources/site/index.html
+++ b/resources/site/index.html
@@ -72,6 +72,7 @@
                             <li><a href="#onlySync">On event only synchronize</a></li>
                             <li><a href="#unidirectional">Unidirectional mappings</a></li>
                             <li><a href="#prefield">Prefield</a>
+                            <li><a href="#elementPropertyWithColon">Element property with colon</a>
                         </ul>
                     </li>
                     <li>
@@ -764,6 +765,16 @@
                     the only difference being that no model-to-view synchronization is done
                     immediately after <code>init</code> is called.
                 </p>
+
+                <h3 id="elementPropertyWithColon">Element property with colon</h3>
+                <p>
+                    Sometimes it's needed to bind an attribute which contains a colon it its name.
+                    This is uncommon in HTML, but can happen in SVG. Since colon is used by the
+                    <code>data-ylcBind</code> syntax, the colon needs to be escaped by putting
+                    the backslash character just in front of it, as shown in the example:
+                </p>
+                <div class="jqExample" data-sourceUrl="examples/elementPropertyWithColon.html">
+                </div>
                 
                 <h2 id="moreExamples">More examples</h2>
 
