--- a/resources/site2/inc/head.html
+++ b/resources/site2/inc/head.html
@@ -4,6 +4,5 @@
 <script src="js/prism.js"></script>
 <script src="js/code_example.js"></script>
 
-<link href="css/reset.css" rel="stylesheet" type="text/css" />
-<link href="css/common.css" rel="stylesheet" type="text/css" />
+<link href="css/main.css" rel="stylesheet" type="text/css" />
 <link href="css/prism.css" rel="stylesheet" type="text/css" />
