--- a/resources/site2/inc/top.html
+++ b/resources/site2/inc/top.html
@@ -5,7 +5,7 @@
 --><div class="topSide">
     <a href="yellowCode.zip" class="download">
         <i class="fa fa-download" aria-hidden="true"></i>&nbsp;
-        Download
+        Download version {{VERSION}}
     </a>
     <a href="https://github.com/pr83/ylc" class="github" target="_blank">
         <i class="fa fa-github" aria-hidden="true"></i>&nbsp;
