--- a/resources/site2/inc/navigationPanel.html
+++ b/resources/site2/inc/navigationPanel.html
@@ -1,18 +1,25 @@
 <ul class="navigation">
     <li><a href="basicExample.html">Basic Example</a></li>
+    <li class="separator"></li>
     <li><a href="expressionEvaluation.html">Expression evaluation</a></li>
     <li><a href="writableExpression.html">Writable expression</a></li>
-    <li><a href="conditionals.html">Conditional elements</a></li>
+    <li><a href="conditionalElements.html">Conditional elements</a></li>
     <li><a href="parametrizedHandlerCalls.html">Parametrized handler calls</a></li>
     <li><a href="eventObject.html">Event object and event handler return value</a></li>
     <li><a href="adHocExpressions.html">Ad hoc expressions</a></li>
     <li><a href="asynchronousModelUpdate.html">Asynchronous model update</a></li>
     <li><a href="jqueryWithinYlc.html">Using a jQuery plugin from within the view</a></li>
     <li><a href="externalEvents.html">Accessing controller from outside</a></li>
+    <li><a href="publicApi.html">Public API</a></li>
     <li><a href="mixins.html">Controller mixins</a></li>
     <li><a href="i18n.html">Localization</a></li>
     <li><a href="onlySync.html">On event only synchronize</a></li>
     <li><a href="unidirectional.html">Unidirectional mappings</a></li>
     <li><a href="prefield.html">Prefield</a>
     <li><a href="elementPropertyWithColon.html">Element property with colon</a>
+    <li class="separator"></li>
+    <li><a href="nestedViews.html">Example: Nested views</a>
+    <li><a href="nestedLoops.html">Example: Nested loops</a>
+    <li><a href="dynamicSum.html">Example: Dynamic sum</a>
+    <li><a href="passwordStrength.html">Example: Password strength</a>
 </ul>
