--- a/resources/site2/adHocExpressions.html
+++ b/resources/site2/adHocExpressions.html
@@ -70,6 +70,8 @@
         </p>
         <div class="jqExample" data-sourceUrl="examples/adHocExpressions.html">
         </div>
+
+        include "inc/previousNextLinks.html"
         
     </div><!--
     
