--- a/resources/site2/asynchronousModelUpdate.html
+++ b/resources/site2/asynchronousModelUpdate.html
@@ -39,6 +39,8 @@
             methods do. When it exists, changes in the model it makes will be
             propagated to the view.
         </p>
+
+        include "inc/previousNextLinks.html"
         
     </div><!--
     
