--- a/resources/site2/conditionalElements.html
+++ b/resources/site2/conditionalElements.html
@@ -22,6 +22,8 @@
             add the following attribute:
             <code>data-ylcIf="<em>condition</em>"</code>.
         </p>
+
+        include "inc/previousNextLinks.html"
         
     </div><!--
     
