--- a/resources/site2/elementPropertyWithColon.html
+++ b/resources/site2/elementPropertyWithColon.html
@@ -23,6 +23,8 @@
         </p>
         <div class="jqExample" data-sourceUrl="examples/elementPropertyWithColon.html">
         </div>
+
+        include "inc/previousNextLinks.html"
         
     </div><!--
     
