--- a/resources/site2/eventObject.html
+++ b/resources/site2/eventObject.html
@@ -32,6 +32,8 @@
         </p>
         <div class="jqExample" data-sourceUrl="examples/eventObject.html">
         </div>
+
+        include "inc/previousNextLinks.html"
         
     </div><!--
     
