--- a/resources/site2/expressionEvaluation.html
+++ b/resources/site2/expressionEvaluation.html
@@ -38,6 +38,8 @@
         </p>
         <div class="jqExample" data-sourceUrl="examples/expression_evaluation.html">
         </div>
+
+        include "inc/previousNextLinks.html"
         
     </div><!--
     
