--- a/resources/site2/externalEvents.html
+++ b/resources/site2/externalEvents.html
@@ -60,6 +60,8 @@
             Yellow code plugin was initialized on that element by passing it
             the controller.
         </p>
+
+        include "inc/previousNextLinks.html"
         
     </div><!--
     
