--- a/resources/site2/i18n.html
+++ b/resources/site2/i18n.html
@@ -50,6 +50,8 @@
         </p>
         <div class="jqExample" data-sourceUrl="examples/i18n.html">
         </div>
+
+        include "inc/previousNextLinks.html"
         
     </div><!--
     
