--- a/resources/site2/inc/head.html
+++ b/resources/site2/inc/head.html
@@ -3,6 +3,7 @@
 <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
 <script src="js/prism.js"></script>
 <script src="js/code_example.js"></script>
+<script src="js/main.js"></script>
 
 <link href="css/main.css" rel="stylesheet" type="text/css" />
 <link href="css/prism.css" rel="stylesheet" type="text/css" />
