--- a/resources/site2/jqueryWithinYlc.html
+++ b/resources/site2/jqueryWithinYlc.html
@@ -41,6 +41,8 @@
             use of asynchronous events to react to an event which is triggered
             by the <code>datepicker</code> plugin.
         </p>
+
+        include "inc/previousNextLinks.html"
         
     </div><!--
     
