--- a/resources/site2/onlySync.html
+++ b/resources/site2/onlySync.html
@@ -41,6 +41,8 @@
         </p>
         <div class="jqExample" data-sourceUrl="examples/onlySync.html">
         </div>
+
+        include "inc/previousNextLinks.html"
         
     </div><!--
     
