--- a/resources/site2/parametrizedHandlerCalls.html
+++ b/resources/site2/parametrizedHandlerCalls.html
@@ -28,6 +28,8 @@
         </p>
         <div class="jqExample" data-sourceUrl="examples/parametrizedHandlerCalls.html">
         </div>
+
+        include "inc/previousNextLinks.html"
         
     </div><!--
     
