--- a/resources/site2/prefield.html
+++ b/resources/site2/prefield.html
@@ -53,6 +53,8 @@
             the only difference being that no model-to-view synchronization is done
             immediately after <code>init</code> is called.
         </p>
+
+        include "inc/previousNextLinks.html"
         
     </div><!--
     
