--- a/resources/site2/unidirectional.html
+++ b/resources/site2/unidirectional.html
@@ -53,6 +53,8 @@
             (user typing something) to the model. For the paragraph text we only
             need to propagate the change in the model to the view.
         </p>
+
+        include "inc/previousNextLinks.html"
         
     </div><!--
     
