--- a/resources/site2/writableExpression.html
+++ b/resources/site2/writableExpression.html
@@ -27,6 +27,8 @@
             <code>persons[0].name</code>, but not to
             <code>"Mrs. " + persons[0].name + " " + persons[0].surname</code>.
         </p>
+
+        include "inc/previousNextLinks.html"
         
     </div><!--
     
