--- a/resources/site2/examples/asynch_update.html
+++ b/resources/site2/examples/asynch_update.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="../yellowCode.min.js"></script>
-
+    include "inc/head.html"
 </head>
 
 <body>
