--- a/resources/site2/examples/password_strength.html
+++ b/resources/site2/examples/password_strength.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="../yellowCode.min.js"></script>
+    include "inc/head.html"
 
     <style>
         .present {color: black}
