--- a/resources/site2/inc/navigationPanel.html
+++ b/resources/site2/inc/navigationPanel.html
@@ -1,4 +1,6 @@
 <ul class="navigation">
+    <li><a href="index.html">Introduction</a></li>
+    <li class="separator"></li>
     <li><a href="basicExample.html">Basic Example</a></li>
     <li class="separator"></li>
     <li><a href="expressionEvaluation.html">Expression evaluation</a></li>
