--- a/resources/site2/inc/top.html
+++ b/resources/site2/inc/top.html
@@ -3,7 +3,7 @@
     <h2>jQuery MVC plugin with support for 2-way data binding</h2>
 </div><!--
 --><div class="topSide">
-    <a href="yellowCode.zip" class="download">
+    <a href="dist/yellowCode.zip" class="download">
         <i class="fa fa-download" aria-hidden="true"></i>&nbsp;
         Download version {{VERSION}}
     </a>
