--- a/resources/site2/examples/jquery_within_ylc.html
+++ b/resources/site2/examples/jquery_within_ylc.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    include "inc/head.html"
     <script src="//code.jquery.com/ui/1.11.2/jquery-ui.min.js"></script>
-    <script src="../yellowCode.min.js"></script>
-
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.2/themes/black-tie/jquery-ui.css" />
-
 </head>
 
 <body>
