--- a/resources/site2/examples/passingEventObject.html
+++ b/resources/site2/examples/passingEventObject.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:mynamespace="http://www.w3.org/1999/xhtml">
 <head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="../yellowCode.min.js"></script>
-
+    include "inc/head.html"
 </head>
 
 <body>
