--- a/resources/site2/examples/unknownModelVariableWithPrefield.html
+++ b/resources/site2/examples/unknownModelVariableWithPrefield.html
@@ -3,9 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="../yellowCode.min.js"></script>
-
+    include "inc/head.html"
 </head>
 
 <body>
