--- a/resources/site/asynchronousModelUpdate.html
+++ b/resources/site/asynchronousModelUpdate.html
@@ -20,11 +20,11 @@
         <p>
             Normally the view is redrawn as soon as the controller method exits.
             Sometimes, however, the controller method can't update the model
-            before it exists, and in that case the changes to the model
+            before it exits, and in that case the changes to the model
             would not be reflected in the view. The most notable example
             is an AJAX call. If the controller method calls AJAX and
             updates the model according to the result of the call,
-            the model will be updated long after the controller method exists.
+            the model will be updated long after the controller method exits.
         </p>
         <p>
             That's exactly the problem the asynchronous model solves.
@@ -36,7 +36,7 @@
             (remember <code>context</code> is the second parameter passed to
             every controller method). We pass an updater function to it.
             The updater function takes the same parameters as the controller
-            methods do. When it exists, changes in the model it makes will be
+            methods do. When it exits, changes in the model it makes will be
             propagated to the view.
         </p>
 
