--- a/resources/site/examples/jquery_within_ylc.html
+++ b/resources/site/examples/jquery_within_ylc.html
@@ -13,7 +13,7 @@
     <div data-ylcLoop="dynamicInput,dynamicInputStatus: dynamicInputs">
         <input
                 data-ylcBind="val: dynamicInput.value"
-                data-ylcEvents="ylcElementInitialized: installDatePicker" />
+                data-ylcElementInit="installDatePicker" />
         <button data-ylcEvents="click: remove">-</button>
     </div>
 </div>
