--- a/resources/site/examples/nestingViews.html
+++ b/resources/site/examples/nestingViews.html
@@ -82,7 +82,7 @@
             };
         }
 
-        /* a simple wrapper of the color picker view + controller (implemented a jQuery plugin) */
+        /* a simple wrapper of the color picker view + controller (implemented as a jQuery plugin) */
         
         $.fn.colorWidget = function(arg1, arg2) {
             var jqTopDiv = $(this);
