--- a/resources/site/externalEvents.html
+++ b/resources/site/externalEvents.html
@@ -30,7 +30,7 @@
             To invoke a controller method from outside the controller, first get so called
             <em>model adapter</em>.
             Model adapter is a JavaScript object which for every controller method
-            contains exactly one method with the same name as the controller.
+            contains exactly one method with the same name as the controller method.
             The adapter method, however, doesn't take the two parameters that every controller
             method gets - neither <code>model</code> nor <code>context</code>.
         </p>
