--- a/resources/site/index.html
+++ b/resources/site/index.html
@@ -30,7 +30,7 @@
             <li>Support for code reusability (mixins).</li>
             <li>Easily integrates with localization/internationalization libraries.</li>
             <li>Support for nesting views.</li>
-            <li>Support for nesting 3rd party jQuery plugins into views.</li>
+            <li>Support for nesting 3rd party jQuery plugins into the views.</li>
         </ul>
         
         include "inc/previousNextLinks.html"
