migrating to Gulp

--- a/resources/site/examples/elementPropertyWithColon.html
+++ b/resources/site/examples/elementPropertyWithColon.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    include "inc/head.html"
+    <!--=include "inc/head.html" -->
 </head>
 
 <h1>Element property with a colon</h1>
