--- a/resources/site/examples/passingEventObject.html
+++ b/resources/site/examples/passingEventObject.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:mynamespace="http://www.w3.org/1999/xhtml">
 <head lang="en">
-    include "inc/head.html"
+    <!--=include "inc/head.html" -->
 </head>
 
 <body>
