--- a/resources/site/examples/unknownModelVariable.html
+++ b/resources/site/examples/unknownModelVariable.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    include "inc/head.html"
+    <!--=include "inc/head.html" -->
 </head>
 
 <body>
