--- a/resources/site/jqueryWithinYlc.html
+++ b/resources/site/jqueryWithinYlc.html
@@ -3,13 +3,13 @@
 
 <head>
     <title>Yellow code - Using a jQuery plugin from within the view</title>
-    include "inc/head.html"
+    <!--=include "inc/head.html" -->
 </head>
 
 <body>
 
     <div class="topWrapper">
-        include "inc/top.html"
+        <!--=include "inc/top.html" -->
     </div>
 
     <div class="contents">
@@ -43,12 +43,12 @@
             by the <code>datepicker</code> plugin.
         </p>
 
-        include "inc/previousNextLinks.html"
+        <!--=include "inc/previousNextLinks.html" -->
         
     </div><!--
     
     --><div class="navigationPanel">
-        include "inc/navigationPanel.html"
+        <!--=include "inc/navigationPanel.html" -->
     </div>
 
 </body>
