--- a/resources/site/writableExpression.html
+++ b/resources/site/writableExpression.html
@@ -3,13 +3,13 @@
 
 <head>
     <title>Yellow code - Writable expression</title>
-    include "inc/head.html"
+    <!--=include "inc/head.html" -->
 </head>
 
 <body>
 
     <div class="topWrapper">
-        include "inc/top.html"
+        <!--=include "inc/top.html" -->
     </div>
 
     <div class="contents">
@@ -28,12 +28,12 @@
             <code>"Mrs. " + persons[0].name + " " + persons[0].surname</code>.
         </p>
 
-        include "inc/previousNextLinks.html"
+        <!--=include "inc/previousNextLinks.html" -->
         
     </div><!--
     
     --><div class="navigationPanel">
-        include "inc/navigationPanel.html"
+        <!--=include "inc/navigationPanel.html" -->
     </div>
 
 </body>
