--- a/resources/site/asynchronousModelUpdate.html
+++ b/resources/site/asynchronousModelUpdate.html
@@ -3,13 +3,13 @@
 
 <head>
     <title>Yellow code - Asynchronous model update</title>
-    include "inc/head.html"
+    <!--=include "inc/head.html" -->
 </head>
 
 <body>
 
     <div class="topWrapper">
-        include "inc/top.html"
+        <!--=include "inc/top.html" -->
     </div>
 
     <div class="contents">
@@ -40,12 +40,12 @@
             propagated to the view.
         </p>
 
-        include "inc/previousNextLinks.html"
+        <!--=include "inc/previousNextLinks.html" -->
         
     </div><!--
     
     --><div class="navigationPanel">
-        include "inc/navigationPanel.html"
+        <!--=include "inc/navigationPanel.html" -->
     </div>
 
 </body>
