--- a/resources/site/conditionalElements.html
+++ b/resources/site/conditionalElements.html
@@ -3,13 +3,13 @@
 
 <head>
     <title>Yellow code - Conditional elements</title>
-    include "inc/head.html"
+    <!--=include "inc/head.html" -->
 </head>
 
 <body>
 
     <div class="topWrapper">
-        include "inc/top.html"
+        <!--=include "inc/top.html" -->
     </div>
 
     <div class="contents">
@@ -23,12 +23,12 @@
             <code>data-ylcIf="<em>condition</em>"</code>.
         </p>
 
-        include "inc/previousNextLinks.html"
+        <!--=include "inc/previousNextLinks.html" -->
         
     </div><!--
     
     --><div class="navigationPanel">
-        include "inc/navigationPanel.html"
+        <!--=include "inc/navigationPanel.html" -->
     </div>
 
 </body>
