--- a/resources/site/dynamicSum.html
+++ b/resources/site/dynamicSum.html
@@ -3,13 +3,13 @@
 
 <head>
     <title>Yellow code - Example: Dynamic sum</title>
-    include "inc/head.html"
+    <!--=include "inc/head.html" -->
 </head>
 
 <body>
 
     <div class="topWrapper">
-        include "inc/top.html"
+        <!--=include "inc/top.html" -->
     </div>
 
     <div class="contents">
@@ -18,12 +18,12 @@
         <div class="jqExample" data-sourceUrl="examples/dynamic_sum.html">
         </div>
 
-        include "inc/previousNextLinks.html"
+        <!--=include "inc/previousNextLinks.html" -->
         
     </div><!--
     
     --><div class="navigationPanel">
-        include "inc/navigationPanel.html"
+        <!--=include "inc/navigationPanel.html" -->
     </div>
 
 </body>
