--- a/resources/site/examples/jquery_within_ylc.html
+++ b/resources/site/examples/jquery_within_ylc.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    include "inc/head.html"
+    <!--=include "inc/head.html" -->
     <script src="//code.jquery.com/ui/1.11.2/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.2/themes/black-tie/jquery-ui.css" />
 </head>
