--- a/resources/site/i18n.html
+++ b/resources/site/i18n.html
@@ -3,13 +3,13 @@
 
 <head>
     <title>Yellow code - Localization</title>
-    include "inc/head.html"
+    <!--=include "inc/head.html" -->
 </head>
 
 <body>
 
     <div class="topWrapper">
-        include "inc/top.html"
+        <!--=include "inc/top.html" -->
     </div>
 
     <div class="contents">
@@ -51,12 +51,12 @@
         <div class="jqExample" data-sourceUrl="examples/i18n.html">
         </div>
 
-        include "inc/previousNextLinks.html"
+        <!--=include "inc/previousNextLinks.html" -->
         
     </div><!--
     
     --><div class="navigationPanel">
-        include "inc/navigationPanel.html"
+        <!--=include "inc/navigationPanel.html" -->
     </div>
 
 </body>
