--- a/resources/site/publicApi.html
+++ b/resources/site/publicApi.html
@@ -23,9 +23,9 @@
             method to the outside world, whereas public API only exposes
             those controller methods which are marked as a part of the
             public API in the controller. To mark a controller method
-            as a part of the public API, use the <code>@PublicApi</code>
+            as a part of the public API, use the <code>@Public</code>
             annotation. Instead of defining the method as a field of
-            the controller, define a controller field called <code>"@PublicApi"</code>
+            the controller, define a controller field called <code>"@Public"</code>
             instead and put all publicly accessible methods as its fields,
             as the following example demonstrates.
         </p>
