New feature: deferred ylcElementInit #7 (documenting)

--- a/test/src/ui/flash.html
+++ b/test/src/ui/flash.html
@@ -1,5 +1,5 @@
 <div data-ylcFlashId="myFlashableElement">
-    <div data-ylcElementInitDone="installPlugin">
+    <div data-ylcChildrenInit="installPlugin">
         <span data-marker="initialValue">{{textValue}}</span>
     </div>
 </div>
